[tool.poetry]
name = "courses"
version = "0.1.0"
description = ""
authors = ["Nikolay Markov <frog158@gmail.com>"]
packages = [
    { include = "base_python" },
]

[tool.poetry.scripts]
fibonachi = "base_python.scripts.fibonachi:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
